# research-assistant

./: .gitignore  README.md  assistant.py  assistant_app.py  check_path.py  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
models/: LlmModel.py  SearchAssistantState.py
search/: web_search.py  wikipedia_search.py
