[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langgraph-cli[inmem]>=0.4.2",
    "openrouter>=1.0",
]
